tests/NormalTests/paczka1/fuzzy1/41615793.err
Error in line 6: MN6odv A164 50,5
Error in line 9: MN6odv S945 87,7
Error in line 10: tdUOgF S306 86,5
Error in line 11: zF3 S945 85,7
Error in line 20: tdUOgF A164 88,3
Error in line 18: MN6odv S148 67,2
Error in line 25: MN6odv S306 76,3
Error in line 27: zF3 A164 45,1
